# UART-ESP32

./: BasicTools.cpp  BasicTools.h  CMakeLists.txt  DataReception.cpp  DataReception.h  ESP32C3_hot_spot.ino  ESP32C3_wifi_connexion.ino  FindFFTW.cmake  FindTBB.cmake  Parameters.h  README.md  Storage.cpp  Storage.h  ThreadProcessing.cpp  ThreadProcessing.h  ThreadReception.cpp  ThreadReception.h  UARTWiFiBridge_MODE1.ino  UARTWifiBridge_Simulation.ino  main.cpp
